fix basket-tool link stretch

--- a/src/components/basket-tool/style.css
+++ b/src/components/basket-tool/style.css
@@ -8,6 +8,9 @@
 
 .BasketTool-link {
   flex: 1;
+}
+
+.BasketTool-link a {
   color: #0087e9;
 }
 
